[package]
name = "vsdown"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = {version = "3.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
flate2 = "1.0"
tar = { git = "https://github.com/eatradish/tar-rs", rev = "d169fb24f80fbf626c87374e55ff45e887516e37" }
progress-streams = "1.1"
indicatif = "0.16"